--- a/.github/workflows/verify-dockerfile.yml
+++ b/.github/workflows/verify-dockerfile.yml
@@ -4,8 +4,11 @@ name: Docker Build
     paths:
     - .dockerignore
     - .dockleignore
-    - .github/workflows/*-dockerfile.yml
+    - .github/workflows/*dockerfile*.yml
     - '**/Dockerfile*'
+  push:
+    branches:
+    - main
 jobs:
   hadolint:
     name: docker / hadolint
@@ -13,7 +16,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
     - name: hadolint
-      uses: reviewdog/action-hadolint@v1@v1.26
+      uses: reviewdog/action-hadolint@v1.26
       with:
         fail_on_error: true
         hadolint_flags: --failure-threshold warning
@@ -39,20 +42,20 @@ jobs:
       uses: actions/cache@v2
       with:
         path: /tmp/.buildx-cache
-        key: ${{ env.CACHE_PREFIX }}-${{ env.CACHE_NAME }}-${{ github.ref }}-${{ hashFiles('**/docker/Dockerfile') }}
+        key: ${{ env.CACHE_PREFIX }}-${{ env.CACHE_NAME }}-${{ github.ref }}-${{ hashFiles('**/Dockerfile') }}
         restore-keys: |
           ${{ env.CACHE_PREFIX }}-${{ env.CACHE_NAME }}-${{ github.ref }}-
           ${{ env.CACHE_PREFIX }}-${{ env.CACHE_NAME }}-
           ${{ env.CACHE_PREFIX }}-dockerfile-
       env:
         CACHE_PREFIX: ${{ runner.os }}-build
-        CACHE_NAME: code-server-dockerfile
+        CACHE_NAME: rust-dockerfile
     - name: Build
       id: docker_build
       uses: docker/build-push-action@v2
       with:
         push: true
-        context: ./docker
+        context: .
         platforms: |
           linux/amd64
           linux/arm64
@@ -61,6 +64,8 @@ jobs:
           ${{ env.BUILD_IMAGE }}:v1
         cache-from: |
           type=local,src=/tmp/.buildx-cache
+        cache-to: |
+          type=local,dest=/tmp/.buildx-cache-new
       env:
         BUILD_IMAGE: localhost:5000/${{ github.repository }}
     - name: Move Cache
@@ -70,7 +75,7 @@ jobs:
     - name: Enable problem matcher
       run: echo "::add-matcher::.github/workflows/dockle-problem-matcher.json"
     - name: Run Dockle
-      continue-on-error: true
+      id: dockle
       uses: docker://goodwithtech/dockle:latest
       with:
         args: --exit-code 1 registry:5000/${{ github.repository }}:latest
@@ -78,7 +83,12 @@ jobs:
         DOCKLE_INSECURE: true
         DOCKLE_NON_SSL: true
     - name: Run Trivy
-      uses: aquasecurity/trivy-action@0.0.18
+      id: trivy
+      if: |
+        ${{ always() && contains(
+          fromJson('[ "success", "failure" ]'), steps.dockle.outcome
+        ) }}
+      uses: aquasecurity/trivy-action@0.1.0
       with:
         image-ref: registry:5000/${{ github.repository }}:latest
         format: table
