--- a/.github/workflows/verify-dockerfile.yml
+++ b/.github/workflows/verify-dockerfile.yml
@@ -14,6 +14,7 @@ jobs:
     name: docker / hadolint
     steps:
     - name: Checkout code
+      id: checkout
       uses: actions/checkout@v2
     - name: hadolint
       uses: reviewdog/action-hadolint@v1.26
@@ -30,6 +31,7 @@ jobs:
         - 5000:5000
     steps:
     - name: Checkout code
+      id: checkout
       uses: actions/checkout@v2
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
