--- a/.github/workflows/verify-dockerfile.yml
+++ b/.github/workflows/verify-dockerfile.yml
@@ -36,24 +36,24 @@ jobs:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
     - name: Set up Docker Buildx
-      id: buildx
+      id: setup-docker-buildx
       uses: docker/setup-buildx-action@v1
       with:
         driver-opts: network=host
     - name: Cache Docker layers
+      id: cache
       uses: actions/cache@v2
       with:
         path: /tmp/.buildx-cache
-        key: ${{ env.CACHE_PREFIX }}-${{ env.CACHE_NAME }}-${{ github.ref }}-${{ hashFiles('**/Dockerfile') }}
+        key: ${{ runner.os }}-build-rust-dockerfile-${{ hashFiles('**/Dockerfile') }}
         restore-keys: |
-          ${{ env.CACHE_PREFIX }}-${{ env.CACHE_NAME }}-${{ github.ref }}-
-          ${{ env.CACHE_PREFIX }}-${{ env.CACHE_NAME }}-
-          ${{ env.CACHE_PREFIX }}-dockerfile-
+          ${{ runner.os }}-build-rust-dockerfile-
       env:
-        CACHE_PREFIX: ${{ runner.os }}-build
-        CACHE_NAME: rust-dockerfile
-    - name: Build
-      id: docker_build
+        CACHE_PREFIX: ${{ runner.os }}
+        CACHE_NAME: caching
+        CACHE_UNIQUE: ${{ hashFiles('**/Dockerfile') }}
+    - name: Docker Buildx
+      id: docker-buildx
       uses: docker/build-push-action@v2
       with:
         push: true
@@ -62,18 +62,24 @@ jobs:
           linux/amd64
           linux/arm64
         tags: |
-          ${{ env.BUILD_IMAGE }}:latest
-          ${{ env.BUILD_IMAGE }}:v1
+          ${{ env.BUILDX_IMAGE }}:latest
+          ${{ env.BUILDX_IMAGE }}:v1
         cache-from: |
-          type=local,src=/tmp/.buildx-cache
+          type=local,src=${{ env.BUILDX_CACHE_FROM }}
         cache-to: |
-          type=local,dest=/tmp/.buildx-cache-new
+          type=local,dest=${{ env.BUILDX_CACHE_TO }}
       env:
-        BUILD_IMAGE: localhost:5000/${{ github.repository }}
-    - name: Move Cache
+        BUILDX_IMAGE: localhost:5000/${{ github.repository }}
+        BUILDX_CACHE_FROM: /tmp/.buildx-cache
+        BUILDX_CACHE_TO: /tmp/.buildx-cache-new
+    - name: Replace the cache
+      id: replace-cache
       run: |
-        rm -rf /tmp/.buildx-cache
-        mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+        rm -rf ${CACHE_DEST}
+        mv ${CACHE_SRC} ${CACHE_DEST}
+      env:
+        CACHE_SRC: /tmp/.buildx-cache-new
+        CACHE_DEST: /tmp/.buildx-cache
     - name: Check images
       continue-on-error: true
       run: |
@@ -84,8 +90,9 @@ jobs:
     - name: Save docker image
       run: |
         docker pull localhost:5000/${{ github.repository }}
-        docker image ls
-        docker save --output /tmp/my_built_image.tar localhost:5000/${{ github.repository }}
+        docker save \
+          --output /tmp/my_built_image.tar \
+          localhost:5000/${{ github.repository }}
     - name: Upload built image
       uses: actions/upload-artifact@v2
       with:
@@ -103,7 +110,7 @@ jobs:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
     - name: Set up Docker Buildx
-      id: buildx
+      id: setup-docker-buildx
       uses: docker/setup-buildx-action@v1
       with:
         driver-opts: network=host
@@ -113,7 +120,7 @@ jobs:
         name: my_built_image
         path: /tmp
     - name: Load image
-      id: load
+      id: docker-load
       run: |
         docker load --input /tmp/my_built_image.tar
         docker image ls
@@ -123,22 +130,23 @@ jobs:
       id: dockle
       uses: docker://goodwithtech/dockle:latest
       with:
-        args: --exit-code 1 localhost:5000/${{ github.repository }}:latest
+        args: --exit-code 1 ${{ env.DOCKER_IMAGE }}
       env:
+        DOCKER_IMAGE: localhost:5000/${{ github.repository }}:latest
         DOCKLE_INSECURE: true
         DOCKLE_NON_SSL: true
     - name: Run Trivy
       id: trivy
-      if: ${{ always() && steps.load.outcome == 'success' }}
       uses: aquasecurity/trivy-action@0.1.0
       with:
-        image-ref: localhost:5000/${{ github.repository }}:latest
+        image-ref: ${{ env.DOCKER_IMAGE }}
         format: table
         exit-code: 1
         ignore-unfixed: true
         vuln-type: os,library
         severity: CRITICAL,HIGH
       env:
+        DOCKER_IMAGE: localhost:5000/${{ github.repository }}:latest
         TRIVY_NON_SSL: true
     runs-on: ubuntu-20.04
   test:
@@ -154,15 +162,17 @@ jobs:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
     - name: Set up Docker Buildx
-      id: buildx
+      id: setup-docker-buildx
       uses: docker/setup-buildx-action@v1
+      with:
+        driver-opts: network=host
     - name: Download built image
       uses: actions/download-artifact@v2
       with:
         name: my_built_image
         path: /tmp
     - name: Load image
-      id: load
+      id: docker-load
       run: |
         docker load --input /tmp/my_built_image.tar
         docker image ls
