--- a/.github/workflows/ytt.yml
+++ b/.github/workflows/ytt.yml
@@ -17,7 +17,8 @@ jobs:
     - name: Compare workflows from templates
       uses: docker://gerritk/ytt:v0.38.0
       with:
-        args: template --file=.github/workflows/.templates --output-files=.github/workflows/
+        entrypoint: /bin/sh
+        args: .github/ytt.sh
     - name: Auto commit
       uses: stefanzweifel/git-auto-commit-action@v4.12.0
       with:
